--- a/sass/component/_our-client.scss
+++ b/sass/component/_our-client.scss
@@ -5,12 +5,12 @@
 }
 
 .client-post {
-  display: flex;
+  // display: flex;
   margin: 0;
   padding-left: 0;
 }
 .client-post__item--append {
-  margin-left: 30px;
+  // margin-left: 30px;
 }
 .client-post__item {
   display: flex;
@@ -47,9 +47,3 @@
 .client-post__icon {
   fill: currentColor;
 }
-
-
-
-
-
-
