--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,28 @@
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
   /* outline: 2px solid tomato; */
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .container {
+    width: 1140px;
+  }
 }
 
 .list {
@@ -334,19 +351,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .header-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -356,10 +361,6 @@
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-}
-
-.header-nav__item--append {
-  margin-left: 50px;
 }
 
 .header-nav__link {
@@ -395,27 +396,17 @@
 }
 
 .contact-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   list-style: none;
   margin: 0 0 0 auto;
   padding-left: 0;
 }
 
 .contact-list__item {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-}
-
-.contact-list__item--append {
-  margin-left: 50px;
 }
 
 .contact-list__link {
@@ -447,10 +438,6 @@
 .banner {
   background-color: var(--footer-bg-color);
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/banner.jpg);
@@ -487,9 +474,6 @@
 }
 
 .pec-post {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -497,10 +481,6 @@
 
 .pec-post__item {
   width: 270px;
-}
-
-.pec-post__item--append {
-  margin-left: 30px;
 }
 
 .pec-box {
@@ -545,22 +525,13 @@
 }
 
 .work {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-.work__item--append {
-  margin-left: 30px;
-}
-
 .work-box {
   position: relative;
-  width: 370px;
-  height: 294px;
 }
 
 .box-label {
@@ -594,14 +565,9 @@
 .our-team__tittle {
   text-align: center;
   margin-top: 0;
-  margin-bottom: 50px;
 }
 
 .pers-cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-align: center;
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -612,10 +578,6 @@
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.pers-cart__item--append {
-  margin-left: 30px;
 }
 
 .pers-label {
@@ -630,14 +592,12 @@
   font-size: 16px;
   line-height: 1.18;
   margin-top: 0;
-  margin-bottom: 10px;
 }
 
 .pers-label__prof {
   font-size: 16px;
   line-height: 1.18;
   margin-top: 0;
-  margin-bottom: 16px;
   color: var(--main-text-color);
 }
 
@@ -648,9 +608,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
   margin: 0;
   padding-left: 0;
   list-style: none;
@@ -683,10 +640,6 @@
   fill: #ffffff;
 }
 
-.pers-social__link--append {
-  margin-left: 10px;
-}
-
 .pers-social__icon {
   fill: currentColor;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -700,15 +653,8 @@
 }
 
 .client-post {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin: 0;
   padding-left: 0;
-}
-
-.client-post__item--append {
-  margin-left: 30px;
 }
 
 .client-post__item {
@@ -938,11 +884,6 @@ footer {
 }
 
 .product-cart__wraper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   list-style: none;
   margin: -15px;
   padding: 0;
