--- a/sass/component/_banner.scss
+++ b/sass/component/_banner.scss
@@ -1,11 +1,11 @@
 .banner {
   background-color: var(--footer-bg-color);
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
 
-  max-width: 1600px;
-  height: 600px;
+  // max-width: 1600px;
+  // height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -38,4 +38,3 @@
     background-color: var(--btn-click-color);
   }
 }
-
