--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -2,12 +2,12 @@
   border-bottom: 1px solid #ececec;
 }
 .site-nav {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
 }
 
 .header-nav {
-  display: flex;
+  // display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -19,7 +19,7 @@
   padding-bottom: 32px;
 }
 .header-nav__item--append {
-  margin-left: 50px;
+  // margin-left: 50px;
 }
 
 .header-nav__link {
@@ -56,19 +56,19 @@
 }
 
 .contact-list {
-  display: flex;
+  // display: flex;
   list-style: none;
   margin: 0 0 0 auto;
   padding-left: 0;
 }
 .contact-list__item {
-  display: inline-flex;
+  // display: inline-flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 .contact-list__item--append {
-  margin-left: 50px;
+  // margin-left: 50px;
 }
 
 .contact-list__link {
