--- a/sass/component/_our-team.scss
+++ b/sass/component/_our-team.scss
@@ -5,12 +5,12 @@
 .our-team__tittle {
   text-align: center;
   margin-top: 0;
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
 }
 
 .pers-cart {
-  display: flex;
-  text-align: center;
+  // display: flex;
+  // text-align: center;
 
   list-style: none;
   margin: 0;
@@ -24,7 +24,7 @@
   border-radius: 0px 0px 4px 4px;
 }
 .pers-cart__item--append {
-  margin-left: 30px;
+  // margin-left: 30px;
 }
 
 .pers-label {
@@ -39,7 +39,7 @@
   line-height: 1.18;
 
   margin-top: 0;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
 }
 
 .pers-label__prof {
@@ -47,14 +47,14 @@
   line-height: 1.18;
 
   margin-top: 0;
-  margin-bottom: 16px;
+  // margin-bottom: 16px;
   color: var(--main-text-color);
 }
 
 .pers-social {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
 
   margin: 0;
   padding-left: 0;
@@ -83,7 +83,7 @@
   }
 }
 .pers-social__link--append {
-  margin-left: 10px;
+  // margin-left: 10px;
 }
 
 .pers-social__icon {
