--- a/sass/component/_peculiar.scss
+++ b/sass/component/_peculiar.scss
@@ -2,7 +2,7 @@
   padding-bottom: 0;
 }
 .pec-post {
-  display: flex;
+  // display: flex;
 
   list-style: none;
   margin: 0;
@@ -13,7 +13,7 @@
 }
 
 .pec-post__item--append {
-  margin-left: 30px;
+  // margin-left: 30px;
 }
 
 .pec-box {
