--- a/sass/component/_product-cart.scss
+++ b/sass/component/_product-cart.scss
@@ -1,6 +1,6 @@
 .product-cart__wraper {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
 
   list-style: none;
   margin: -15px;
@@ -12,7 +12,7 @@
   margin: 15px;
 
   &:hover .product-cart__overlay {
-  transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -50,7 +50,6 @@
   color: var(--white-color);
 }
 
-
 .cart-footer {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
@@ -71,7 +70,7 @@
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
@@ -93,6 +92,3 @@
   margin-top: 0;
   margin-bottom: 0;
 }
-
-
-
