--- a/sass/component/_work.scss
+++ b/sass/component/_work.scss
@@ -5,20 +5,20 @@
 }
 
 .work {
-  display: flex;
+  // display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
 .work__item--append {
-  margin-left: 30px;
+  // margin-left: 30px;
 }
 
 .work-box {
   position: relative;
-  width: 370px;
-  height: 294px;
+  // width: 370px;
+  // height: 294px;
 }
 
 .box-label {
